--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/pics/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nerko One"/>
@@ -19,7 +19,7 @@
             <div class="navitem">
 
                 <div class="picnav">
-                    <a href="#home"><img src="pics/navimg.png" alt="" width="130px"></a>
+                    <a href="#home"><img src="navimg.png" alt="" width="130px"></a>
                     
                 </div>
                 
@@ -41,11 +41,11 @@
             <P><b>Brazil</b> is the most successful national team in the FIFA World Cup, being crowned winner five times: 1958, 1962, 1970, 1994 and 2002.  <br> <b>The Seleção</b> also has the best overall performance in the World Cup competition, both in proportional and absolute terms, with a record of 73 victories in 109 matches played, 124 goal difference, 237 points, and 18 losses
             </P>
             <h3>Next Match</h3>
-            <img src="pics/nextmatch.png" alt="" width="430px" class="nextmatch">
+            <img src="nextmatch.png" alt="" width="430px" class="nextmatch">
         </div>
 
         <div class="TWO">
-            <img src="pics/icon.png" alt=""  width="284.5px">
+            <img src="icon.png" alt=""  width="284.5px">
         </div>
     </div>
 
@@ -53,7 +53,7 @@
 
         <div class="sectiontwo">
             <div class="onebr">
-                <img src="pics/image 1.png" alt="" width="466px">
+                <img src="image 1.png" alt="" width="466px">
                 <h3>Brazil national team</h3>
                 <p>is known by different names in various parts of the world. Nicknames for the squad in Brazil include:
                     Canarinho, meaning 'Little Canary', a reference to a species of bird commonly found in Brazil that has a vivid yellow color</p>
@@ -61,7 +61,7 @@
             <div class="twobr">
                 <h3>World Cup football shirt</h3>
                 <p>The Nike Brazil 2022 World Cup football shirt ditches the classic yellow for a bright yellow, officially "Dynamic Yellow". In terms of design, the Brazil 2022 World Cup home shirt features a small traditional collar, colored green and decorated with a blue stripe</p>
-                <img class="tw" src="pics/image 2.png" alt=""  width="466px">
+                <img class="tw" src="image 2.png" alt=""  width="466px">
             </div>
         </div>
 
@@ -84,12 +84,12 @@
                 Brazil vs South Korea 4-1 (Ras Abu Aboud)
 
             </div>
-            <img class="pi" src="pics/wc.png" alt="" width="565px">
+            <img class="pi" src="wc.png" alt="" width="565px">
         </div>
 
         <h1  id="three" class="wc">World Ranking</h1>
         <div class="wcc">
-            <img src="pics/image 8.png" alt="" width="820px">
+            <img src="image 8.png" alt="" width="820px">
         </div>
 
         <h1 id="four" class="wc">Gallery</h1>
@@ -97,20 +97,20 @@
         <div class="gallery">
             <table>
                 <tr>
-                    <td><img src="pics/Rectangle 10.png" alt="" width="390px"></td>
-                    <td><img src="pics/Rectangle 11.png" alt=""width="390px"></td>
-                    <td><img src="pics/Rectangle 8.png" alt="" width="390px"></td>
+                    <td><img src="Rectangle 10.png" alt="" width="390px"></td>
+                    <td><img src="Rectangle 11.png" alt=""width="390px"></td>
+                    <td><img src="Rectangle 8.png" alt="" width="390px"></td>
                 </tr>
                 <tr>
-                    <td><img src="pics/Rectangle 7.png" alt="" width="390px"></td>
-                    <td><img src="pics/Rectangle 6.png" alt="" width="390px"></td>
-                    <td><img src="pics/Rectangle 9.png" alt="" width="390px"></td>
+                    <td><img src="Rectangle 7.png" alt="" width="390px"></td>
+                    <td><img src="Rectangle 6.png" alt="" width="390px"></td>
+                    <td><img src="Rectangle 9.png" alt="" width="390px"></td>
                 </tr>
             </table>
         </div>
 
         <div class="green">
-            <img src="pics/logo.png" alt="" width="96px">  <br>
+            <img src="logo.png" alt="" width="96px">  <br>
 
             <div class="match" style="color:white ;">
                 BRAZILIAN FOOTBALL ASSOCIATION
