--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="home" class="Sectionhome">
 
         <div class="ONE">
-            <h1>Brazil</h1>
+            <h1 class="lol">Brazil</h1>
             <P><b>Brazil</b> is the most successful national team in the FIFA World Cup, being crowned winner five times: 1958, 1962, 1970, 1994 and 2002.  <br> <b>The Seleção</b> also has the best overall performance in the World Cup competition, both in proportional and absolute terms, with a record of 73 victories in 109 matches played, 124 goal difference, 237 points, and 18 losses
             </P>
             <h3>Next Match</h3>
